--- a/_posts/2013-07-17-phd-grind.md
+++ b/_posts/2013-07-17-phd-grind.md
@@ -3,9 +3,9 @@ layout: default
 title: 读《PhD Grind》有感
 ---
 
-记得一年前正在准备离开 IU 的时候，有人介绍给我 Philip Guo 的这本小书《<a href="http://pgbovine.net/PhD-memoir.htm">PhD Grind</a>》（下文简称PG），讲述他自己为 PhD 奋斗的故事。当时我没有仔细看。前几天跟一个朋友谈起 Coverity，他再次的跟我提起这本书，我才发现 Philip 在斯坦福的导师正是 Coverity 的创始人之一 Dawson Engler 教授。Coverity 主要的技术就是由 Dawson 和他的学生 Andy Chou 的一篇 OSDI 论文发展而成的。而 Philip 在 Dawson 手下做的第一个项目就是 Klee，一个跟 Coverity 具有类似性质的东西。
+记得一年前正在准备离开 IU 的时候，有人介绍给我 Philip Guo 的这本小书《<a href="http://pgbovine.net/PhD-memoir.htm">PhD Grind</a>》（下文简称 PG），讲述他自己的 PhD “奋斗故事”。当时我没有仔细看。前几天跟一个朋友谈起 Coverity，他再次的跟我提起这本书，我才发现 Philip 在斯坦福的导师正是 Coverity 的创始人之一 Dawson Engler 教授。Coverity 主要的技术就是由 Dawson 和他的学生 Andy Chou 的一篇 OSDI 论文发展而成的。而 Philip 在 Dawson 手下做的第一个项目就是 <a href="http://klee.llvm.org">Klee</a>，一个跟 Coverity 具有类似性质的东西。
 
-在这种“渊源”的吸引之下，我把这本书从头看到了尾。不得不承认，这是一本非常难得的，真实的记录博士生活细节的故事。如果你正在考虑进入博士班，我强烈建议你先看看这本书，因为它会介绍你将面临的生活。
+在这种“渊源”的吸引之下，我把这本书从头看到了尾。不得不承认，这是一本非常难得的，真实的记录一位“名校博士”生活细节的文献。如果你正在考虑进入博士班，特别是计算机博士，我强烈建议你先看看这本书，因为你可以清楚的看到你将面临的生活。
 
 虽然 Philip 读博士的动机和经历跟我很不一样，然而这里面提到的许多东西也发生在了我的身上。在某些观点上他比我看的更加透彻，更加乐观一些。然而在另外一些观点上，我觉得自己的认识更加深刻。现在我就其中的几个主题，谈谈自己的看法吧。
 
