--- a/_posts/2013-07-17-phd-grind.md
+++ b/_posts/2013-07-17-phd-grind.md
@@ -59,7 +59,7 @@ Philip 提到，Dawson 的学生，除了一个人以外，三年都没能发表
 
 看来不管是斯坦福，MIT，Cornell 还是 IU，计算机专业都一个样。你发三四篇 paper，然后东拉西扯把它们“串成”一篇博士论文，然后就可以毕业。论文都是发在会议，各个会议都有不同的 deadline，所以你基本上就是在被这些 deadline “驱赶”着做研究。会议的论文审评过程也有非常大的问题。
 
-所以我比较幸运（或者说不幸）的是，Dan Friedman 和 Kent Dybvig 这样的教授，根本不在乎什么 deadline，他们也不在乎会议的“等级”。他们更看重的是论文的内容。所以我在 IU 的近四年里，从没感觉到这种问题。程序语言的一些顶级专家比如 Neil Jones，有时候也发表在一些 workshop 上。他们只是从兴趣出发，希望在会议上与人交流。在我的心目中，Jones 教授是与<a href="http://www.yinwang.org/blog-cn/2013/07/13/church-turing"图灵</a>一个级别的科学家。
+所以我比较幸运（或者说不幸）的是，Dan Friedman 和 Kent Dybvig 这样的教授，根本不在乎什么 deadline，他们也不在乎会议的“等级”。他们更看重的是论文的内容。所以我在 IU 的近四年里，从没感觉到这种问题。程序语言的一些顶级专家比如 Neil Jones，有时候也发表在一些 workshop 上。他们只是从兴趣出发，希望在会议上与人交流。在我的心目中，Jones 教授是与<a href="http://www.yinwang.org/blog-cn/2013/07/13/church-turing">图灵</a>一个级别的科学家。
 
 在这种意义上，Philip 所在小组的风气其实比不上我在 IU 所在的小组。然而，IU 并不是每个组都这样，我只能说 Friedman 的小组是比较特殊的。
 
