--- a/_posts/2013-07-17-phd-grind.md
+++ b/_posts/2013-07-17-phd-grind.md
@@ -61,4 +61,4 @@ Philip 提到，Dawson 的学生，除了一个人以外，三年都没能发表
 
 所以我比较幸运（或者说不幸）的是，Dan Friedman 和 Kent Dybvig 这样的教授，根本不在乎什么 deadline，他们也不在乎会议的“等级”。他们更看重的是论文的内容。所以我在 IU 的近四年里，从没感觉到这种问题。程序语言的一些顶级专家比如 Neil Jones，有时候也发表在一些 workshop 上。他们只是从兴趣出发，希望在会议上与人交流。在我的心目中，Jones 教授是跟<a href="http://www.yinwang.org/blog-cn/2013/07/13/church-turing">图灵</a>一个级别的科学家。
 
-在这种意义上，Philip 所在小组的风气其实远远比不上我在 IU 所在的小组。然而，IU 并不是每个组都这样，我只能说 Friedman 的“小组”是比较特殊的。实际上，这个小组根本就不存在。我们这帮学生都是各自为政的。
+在这种意义上，Philip 所在小组的风气其实远远比不上我在 IU 所在的小组。然而，IU 并不是每个组都这样，我只能说 Friedman 的“小组”是比较特殊的。实际上，这个“Friedman 小组”是根本就不存在的。我们这帮学生都是各自为政的，没有人管。
