--- a/_posts/2013-07-17-phd-grind.md
+++ b/_posts/2013-07-17-phd-grind.md
@@ -3,16 +3,16 @@ layout: default
 title: 读《PhD Grind》有感
 ---
 
-记得一年前正在准备离开 IU 的时候，有人介绍给我 Philip Guo 的这本小书《<a href="http://pgbovine.net/PhD-memoir.htm">PhD Grind</a>》（下文简称 PG），讲述他自己的 PhD “奋斗故事”。当时我没有仔细看。前几天跟一个朋友谈起 Coverity，他再次的跟我提起这本书，我才发现 Philip 在斯坦福的导师正是 Coverity 的创始人之一 Dawson Engler 教授。Coverity 主要的技术就是由 Dawson 和他的学生 Andy Chou 的一篇 OSDI 论文发展而成的。而 Philip 在 Dawson 手下做的第一个项目就是 <a href="http://klee.llvm.org">Klee</a>，一个跟 Coverity 具有类似性质的东西。
+记得一年前正在准备离开 IU 的时候，有人介绍给我斯坦福博士生 Philip Guo 的这本小书《<a href="http://pgbovine.net/PhD-memoir.htm">PhD Grind</a>》，讲述他自己的 PhD “奋斗故事”。当时我没有仔细看。前几天跟一个朋友谈起 Coverity，他再次的跟我提起这本书，我才发现 Philip 在斯坦福的导师正是 Coverity 的创始人之一 Dawson Engler 教授。Coverity 的主要技术就是由 Dawson 和他的学生 Andy Chou 的一篇 OSDI 论文发展而成的。而 Philip 在 Dawson 手下做的第一个项目就是 <a href="http://klee.llvm.org">Klee</a>，一个跟 Coverity 具有类似性质的东西。
 
-在这种“渊源”的吸引之下，我把这本书从头看到了尾。不得不承认，这是一本非常难得的，真实的记录一位“名校博士”生活细节的文献。如果你正在考虑进入博士班，特别是计算机博士，我强烈建议你先看看这本书，因为你可以清楚的看到你将面临的生活。
+在这种“渊源”的吸引之下，我把这本书从头看到了尾。不得不承认，这是一本非常难得的，真实的记录一位“名校博士”的研究生活细节的文献。如果你正在考虑进入博士班，特别是计算机博士，我强烈建议你先看看这本书，因为你可以清楚的看到你将面临的生活。
 
 虽然 Philip 读博士的动机和经历跟我很不一样，然而这里面提到的许多东西也发生在了我的身上。在某些观点上他比我看的更加透彻，更加乐观一些。然而在另外一些观点上，我觉得自己的认识更加深刻。现在我就其中的几个主题，谈谈自己的看法吧。
 
 
 ### 发表的游戏
 
-PG 整本书里都充满了对于“发表论文”这个游戏的各种规则的介绍。作者在这上面用得最多的词汇，就是 “top-tier conference”, “second-tier conference”，“workshop”，“第一作者”，“第二作者”，“投稿接受率” 等用于对会议和论文进行“分级”的词汇。看到这些词汇，让我仿佛又回到了清华的年代，因为当时我耳边出现最多的也是这些词汇。出现第二多的，就是“deadline”。有人把计算机科学戏称为“deadline 驱动”的科学，也就是这个原因吧。
+整本书里都充满了对于“发表论文”这个游戏的各种术语，仿佛他的头脑里每天想的都是这些事情。作者在这上面用得最多的词汇，就是 “top-tier conference”, “second-tier conference”，“workshop”，“第一作者”，“第二作者”，“投稿接受率” 等用于对会议和论文进行“分级”的词汇。看到这些词汇，让我仿佛又回到了清华的年代，因为当时我耳边出现最多的也是这些词汇。出现第二多的，就是“deadline”。有人把计算机科学戏称为“deadline 驱动”的科学，也就是这个原因吧。
 
 通过会议（而不是期刊）来发表论文，铺垫自己在学术界的道路，这是计算机科学特有的现象。其它的科学领域一般都更看重期刊的论文发表，而会议只是交流思想的场合。程序语言领域的一些学者，比如 <a href="http://www.ccs.neu.edu/home/matthias/Thoughts/More_on_conferences.html">Matthias Felleisen</a>（《The Little Schemer》的第二作者），都意识到了这个问题。他们觉得，计算机科学的很多会议，其实在起着降低研究氛围和研究质量的作用。这些会议之中，又以那些出版“会议文集”（proceedings）的会议更为有害，因为这些会议吸引了更多的为了凑论文“发表数”（而不是为了与人交流）而来的人。
 
