--- a/_posts/2013-07-17-phd-grind.md
+++ b/_posts/2013-07-17-phd-grind.md
@@ -14,14 +14,14 @@ title: 读《PhD Grind》有感
 
 整本书里都充满了对于“发表论文”这个游戏的各种术语，仿佛他的头脑里每天想的都是这些事情。作者在这上面用得最多的词汇，就是 “top-tier conference”, “second-tier conference”，“workshop”，“第一作者”，“第二作者”，“投稿接受率” 等用于对会议和论文进行“分级”的词汇。看到这些词汇，让我仿佛又回到了清华的年代，因为当时我耳边出现最多的也是这些词汇。出现第二多的，就是“deadline”。有人把计算机科学戏称为“deadline 驱动”的科学，也就是这个原因吧。
 
-通过会议（而不是期刊）来发表论文，铺垫自己在学术界的道路，这是计算机科学特有的现象。其它的科学领域一般都更看重期刊的论文发表，而会议只是交流思想的场合。程序语言领域的一些学者，比如 <a href="http://www.ccs.neu.edu/home/matthias/Thoughts/More_on_conferences.html">Matthias Felleisen</a>（《The Little Schemer》的第二作者），都意识到了这个问题。他们觉得，计算机科学的很多会议，其实在起着降低研究氛围和研究质量的作用。这些会议之中，又以那些出版“会议文集”（proceedings）的会议更为有害，因为这些会议吸引了更多的为了凑论文“发表数”（而不是为了与人交流）而来的人。
+通过会议（而不是期刊）来发表论文，铺垫自己在学术界的道路，这是计算机科学特有的现象。其它的科学领域一般都更看重期刊的论文发表，而会议只是交流思想的场合。程序语言领域的一些顶尖学者，比如 <a href="http://www.ccs.neu.edu/home/matthias/Thoughts/More_on_conferences.html">Matthias Felleisen</a>（《The Little Schemer》的第二作者），已经意识到了这个问题。他们觉得，计算机科学的很多会议，其实在起着降低研究氛围和研究质量的作用。这些会议之中，又以那些出版“会议文集”（proceedings）的会议更为有害，因为这些会议吸引了更多的为了凑论文“发表数”（而不是为了与人交流）而来的人。
 
-虽然 Philip 声明自己并没有想改变学术界的现状，但我觉得他把这些事情如实的描述出来，对于计算机科学领域的未来是有相当的意义的，至少它能引起大家的反思。反思的人多了，自然就会有人想改变这种现状。比如，程序语言的领域最近开始出现一些专门用于交流思想，而不是发表论文的会议。我希望计算机科学能向其它领域学习，要么成长起来成为一门真正的科学，要么就勇敢的承认自己不是科学。
+虽然 Philip 声明自己并没有想改变学术界的现状，但我觉得他把这些事情如实的描述出来，对于计算机领域的未来是有相当的意义的，至少它能引起大家的反思。反思的人多了，自然就会有人想改变这种现状。比如，程序语言的领域最近开始出现一些专门用于交流思想，而不是发表论文的会议。我希望计算机科学能向其它领域学习，要么成长起来成为一门真正的科学，要么就勇敢的承认自己不是科学。
 
 
 ### 研究兴趣
 
-从整本书来看，Philip 从一开头就有一个理想，他想提高人们编程的效率。然而进入斯坦福之后，他找了 Dawson 作为导师。而 Dawson 所专注的领域其实叫做“程序分析”（也就是 Coverity 的专长），它更接近于我的领域（程序语言，PL）。这两者的兴趣看似相关，却是很不一样的。读博士最麻烦的事情莫过于找了兴趣不一致的导师。所以读博士之前一定要先搞清楚自己在乎什么，要先看准兴趣相投的导师，而不是学校的名气。对于这个问题，你可以参考 Matthias 的一篇<a href="http://www.ccs.neu.edu/home/matthias/Thoughts/How_do_I_get_a_PhD.html">文章</a>。然而这个说起来容易做起来难，因为很多学生是自欺欺人，好像自己对什么都能感兴趣一样，只求能找到一个教授。
+从整本书来看，Philip 从一开头就有一个理想，他想提高人们编程的效率。然而进入斯坦福之后，他找了 Dawson 作为导师。而 Dawson 所专注的领域其实叫做“程序分析”（也就是 Coverity 的专长），它更接近于我的领域（程序语言，PL）。这两者的兴趣看似相关，却是很不一样的。读博士最麻烦的事情莫过于找了兴趣不一致的导师。所以读博士之前一定要先搞清楚自己在乎什么，要看准兴趣相投的导师，而不是学校的名气。对于这个问题，你可以参考 Matthias 的一篇<a href="http://www.ccs.neu.edu/home/matthias/Thoughts/How_do_I_get_a_PhD.html">文章</a>。然而这个说起来容易做起来难，因为很多学生是自欺欺人，好像自己对什么都能感兴趣一样，只求能找到一个教授。
 
 很显然 Dawson 不是很在乎 Philip 关心的大部分编程工具（除了 IncPy），他可能觉得那些东西太“轻量级”了。这种现象在程序语言的研究者里面较为常见，包括我之前的导师 Amr Sabry。当我兴致勃勃的给大家做演讲，介绍我的 <a href="http://www.yinwang.org/blog-cn/2013/04/21/ydiff-%E7%BB%93%E6%9E%84%E5%8C%96%E7%9A%84%E7%A8%8B%E5%BA%8F%E6%AF%94%E8%BE%83">ydiff</a> 工具的时候，Amr 没有到场，并且没有回复我任何一封有关 ydiff 的 email。很显然，他觉得我做这些事情是浪费时间，降低自己的价值。然而我觉得这是很有意义，很好玩的事情，并且将来这种工具应该会被程序员广泛的采用。喜欢做一些好玩难度又不大的东西，并不说明这个人不能做高精尖的东西。我们应该关心的最重要的事情，其实是这个东西可以给人带来的好处。
 
@@ -30,13 +30,13 @@ title: 读《PhD Grind》有感
 
 ### 让新手做脏活
 
-Philip 在斯坦福第一年做 Klee 项目的遭遇，非常像我在 Coverity 那几个月的遭遇，虽然 Klee 的质量显然没法和 Coverity 相提并论。很显然，不管是大学教授的研究小组还是公司，新手进去都是“打下手”，“做脏活”的，以至于让人头脑麻木。
+Philip 在斯坦福第一年做 Klee 项目的遭遇，非常像我在 Coverity 的那几个月，虽然 Klee 的质量显然没法和 Coverity 相提并论。很显然，不管是大学教授的研究小组还是公司，新手进去都是“打下手”，“做脏活”的，以至于让人头脑麻木。
 
 在程序分析工具里面，这种脏活就更多。要修复任何一个 bug 都极其困难。经常是费了好几天功夫，结果最后发现只修改了一两行代码就搞定。我在 Coverity 就做了好些这种事情，做得头痛。白天做，晚上做，睡觉了都还在想那东西到底出了什么问题！如果最后发现修复的那些 bug 是自己根本不会犯的错误，那就更加郁闷。遇到跑 benchmark 这种活就更惨，完全没有“智力”可言，一跑就是好几天。
 
 公司对于我这种“不明底细”的“新手”有如此的待遇还情有可原。毕竟这些麻烦事是要有人来做的，不找新人来做找谁？可是像斯坦福这样的大牌牛校，对于优秀的新同学（Philip 可是拿了两个 fellowship 来的）也是同样的待遇，就有点丢脸了。这哪里叫“培养”啊？
 
-Philip 也提到了他为什么不换导师。因为如果换一个研究组，进去又得从头开始做脏活。这就是我在 IU 的最后一个学期的遭遇。幸好，我走掉了。
+Philip 也提到了他为什么不换导师。因为如果换一个研究组，进去又得从头开始做脏活。这就是我在 IU 的最后一个学期的遭遇。幸好，我其实啥都没干，走掉了。
 
 
 ### 恶性竞争
