--- a/_posts/2013-03-08-on-syntax.md
+++ b/_posts/2013-03-08-on-syntax.md
@@ -50,7 +50,7 @@ Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 F
 
 同样的公式，传统的数学符号是这个样子：
 
-
+<img src="http://www.yinwang.org/images/deriv-math.png">
 
 这是什么玩意啊？`d` 除以 `dx`，然后乘以 `x` 的平方？
 
