--- a/_posts/2013-10-29-pysonar2.md
+++ b/_posts/2013-10-29-pysonar2.md
@@ -9,7 +9,7 @@ title: PySonar2 开源
 
 经过一阵子考察之后，我发现 PySonar2 仍然是世界上最先进的 Python 静态分析。其准确程度超过了所有的 Python IDE （包括 PyCharm 3.0 在内）。而且其中包含了一些世界最领先的技术（未发表）。也许有一天我会把里面用的技术写成论文，不过目前真的太忙了，没工夫解释那些东西。
 
-另外，其实给 Google 的代码里有一个很“严重”的 bug，导致性能非常低，所以他们其实仍然在用第一版的代码。<a href="http://www.sourcegraph.com>sourcegraph.com</a>  使用的也是第一版的代码。
+另外，其实给 Google 的代码里有一个很“严重”的 bug，导致性能非常低，所以他们其实仍然在用第一版的代码。<a href="http://www.sourcegraph.com">sourcegraph.com</a>  使用的也是第一版的代码。
 
 最近重新燃起了对这片代码的兴趣，经过最近修改两行代码之后，这个 bug 被轻松消灭掉了。然后又发现很多小问题，也逐渐修补好了。现在它能够处理整个 Python 2.5, 2.6, 2.7 的标准库和类似 Django 的项目，只需要3分钟的样子。界面也比较友好。
 
