--- a/_posts/2013-10-29-pysonar2.md
+++ b/_posts/2013-10-29-pysonar2.md
@@ -13,4 +13,4 @@ title: PySonar2 开源
 
 最近重新燃起了对这片代码的兴趣，经过最近修改两行代码之后，这个 bug 被轻松消灭掉了。然后又发现很多小问题，也逐渐修补好了。现在它能够处理整个 Python 2.5, 2.6, 2.7 的标准库和类似 Django 的项目，只需要3分钟的样子。界面也比较友好。
 
-因为 Python 语言的复杂性和 PySonar 使用的分析技术的复杂性，我相信 PySonar2 里面肯定还有很多 bug。也会逐一修补。如果发现，请开启 GitHub 的 issue。
+因为 Python 语言的复杂性和 PySonar 使用的分析技术的深入程度，我相信 PySonar2 里面肯定还有很多 bug。也会逐一修补。如果发现，请开启 GitHub 的 issue。
